syntax = "proto3";
option go_package = "./stayalive/stayalive";

message StayAliveRequest {
    string aliveReq = 1;
}

message StayAliveResponse {
    bool aliveResp = 1;
    int32 size = 2;
}

service StayAliveService {
  rpc StayAlive(StayAliveRequest) returns (StayAliveResponse) {}
}
